# kbengine3

./: .gitignore  .gitmodules  BuildCopyReleaseHere.bat  Cargo.toml  Readme.txt  game_config.txt  index.html
Examples/2D/: Cargo.toml  build.rs  index.html
Examples/2D/src/: example_game.rs  game_config.txt  main.rs
Examples/3D/: Cargo.toml  build.rs  build_wasm.bat  index.html
Examples/3D/game_assets/: ELP_Barrel.gltf  Shotgun.gltf  barrel.gltf  floor.glb  floor.gltf  fp_hands.glb  fp_hands_outline.glb  pinky.glb  pinky.gltf
Examples/3D/game_assets/models/: barrel.glb  floor.glb  fp_hands.glb  fp_hands_outline.glb  level.glb  monster.glb  pinky.glb  sign.glb  sky_dome.glb
Examples/3D/game_assets/shaders/: first_person.wgsl  first_person_outline.wgsl  monster.wgsl
Examples/3D/src/: example_game.rs  game_actors.rs  game_config.txt  game_vfx.rs  main.rs
Examples/key_of_return/: Cargo.toml  build_wasm.bat  index.html
Examples/key_of_return/src/: example_game.rs  game_config.txt  main.rs
GameAssets/: game_config.txt
enc_temp_folder/b7346b3dfb5fe62ea58562bd2d4e2c/: example_game.rs
engine_assets/: game_config.txt
engine_assets/shaders/: Model.wgsl  Particle.wgsl  basic_sprite.wgsl  bullet_hole.wgsl  cloud_sprite.wgsl  decal.wgsl  line.wgsl  model_with_holes.wgsl  postprocess_uber.wgsl  sky_dome.wgsl  sky_dome_draw.wgsl  sky_dome_occlude.wgsl  sunbeam_draw.wgsl  sunbeam_mask.wgsl
examples/2d/: build_wasm.bat  index.html
examples/2d/src/: example_game.rs  game_config.txt
examples/3d/: index.html
examples/3d/game_assets/models/: decal.glb  fp_hands.glb  shotgun.glb  sky_dome.glb
examples/3d/game_assets/shaders/: first_person_outline.wgsl  monster.wgsl
examples/3d/src/: example_game.rs  game_actors.rs  game_config.txt
game_assets/: BasicSprite.wgsl  CloudSprite.wgsl  Model.wgsl  Particle.wgsl  PostProcess.wgsl  game_config.txt  pinky.gltf  postprocess_uber.wgsl
source_assets/: MassAve_House_1_Mesh.fbx  barrel.blend  barrel.blend1  chironex.blend  chironex.blend1  decal.blend  floor.blend  floor.blend1  fp_hands.blend  fp_hands.blend1  level.blend  level.blend1  level_t.psd  monster.blend  monster.blend1  monster_gibs_t.psd  pinky.blend  shotgun.blend  shotgun.blend1  sign.blend  sky_dome.blend  sky_dome.blend1
src/: BasicSprite.wgsl  game_config.rs  game_config.txt  game_engine.rs  game_input.rs  game_log.rs  game_object.rs  game_renderer.rs  game_resource.rs  game_texture.rs  game_utils.rs  kb_assets.rs  kb_collision.rs  kb_config.rs  kb_engine.rs  kb_game_object.rs  kb_input.rs  kb_object.rs  kb_pipeline.rs  kb_renderer.rs  kb_resource.rs  kb_utils.rs  lib.rs  main.rs
src/render_groups/: kb_bullet_hole_group.rs  kb_line_group.rs  kb_model_group.rs  kb_postprocess_group.rs  kb_sprite_group.rs  kb_sunbeam_group.rs
web/: index.html
