[package]
name = "kb_engine3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
wgpu_text = "0.8.7"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
json = "0.12.4"
ab_glyph = "0.2.24"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.2.0", features = [] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys =  { version = "0.3.69", features = [] }
