[package]
name = "kb_engine_2D_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen"] }
pollster = "0.3"

kb_engine3 = { path = "../../" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
#console_log = { version = "0.2.0", features = [] }
#wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
#wgpu = { version = "0.19.3", features = ["webgl"] }
web-sys =  { version = "0.3.69", features = [] }