[package]
name = "kb_engine_3D_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen"] }
pollster = "0.3"

kb_engine3 = { path = "../../", features = ["wasm_include_3d","bullet_holes"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
web-sys =  { version = "0.3.69", features = [] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"